# rust-production-project

./: Cargo.toml  README.md
.cargo/: config.toml
src/: error.rs  main.rs
src/log/: mod.rs
src/model/: mod.rs
src/web/: mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_ticket.rs
